refactorings & cleaning